--- a/Tenant Onboarding Solution/Src/Details Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Details Screen.fx.yaml
@@ -587,6 +587,7 @@
                             Height: =30
                             Size: =10
                             Text: ="Name of Spouse"
+                            Visible: =spouseName_value.Visible
                             X: =name_label.X
                             Y: =If(company_value.Height > occupation_value.Height,company_value.Y + company_value.Height + 10,occupation_value.Y + occupation_value.Height + 10)
                             ZIndex: =27
@@ -602,6 +603,7 @@
                             Height: =30
                             Size: =11
                             Text: =record.'Name of Spouse'
+                            Visible: =!IsBlank(Self.Text)
                             Width: =Parent.Width/4 - 20
                             X: =spouseName_label.X
                             Y: =spouseName_label.Y + spouseName_label.Height
@@ -616,6 +618,7 @@
                             Height: =30
                             Size: =10
                             Text: ="Spouse Occupation/ Office Name and Address"
+                            Visible: =spouseDetails_value.Visible
                             Width: =300
                             X: =spouseName_value.X + spouseName_value.Width + 10
                             Y: =spouseName_label.Y //+ company_value.Height + 10//company_value.Y + company_value.Height + 10
@@ -633,6 +636,7 @@
                             Height: =30
                             Size: =11
                             Text: =record.'Name of Spouse'
+                            Visible: =!IsBlank(Self.Text)
                             Width: =Parent.Width/2
                             X: =spouseDetails_label.X
                             Y: =spouseDetails_label.Y + spouseDetails_label.Height
@@ -647,6 +651,7 @@
                             Height: =30
                             Size: =10
                             Text: ="Number of Children"
+                            Visible: =noOfChildren_value.Visible
                             X: =spouseDetails_value.X + spouseDetails_value.Width + 10
                             Y: =spouseName_label.Y 
                             ZIndex: =31
@@ -662,6 +667,7 @@
                             Height: =30
                             Size: =11
                             Text: =record.'Number of Children'
+                            Visible: =!IsBlank(Self.Text)
                             Width: =Parent.Width/4 - 20
                             X: =noOfChildren_label.X
                             Y: =noOfChildren_label.Y + noOfChildren_label.Height
