--- a/Tenant Onboarding Solution/Src/All Requests Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/All Requests Screen.fx.yaml
@@ -307,7 +307,7 @@
                                 StartsWith(
                                     'Name of Prospective Tenant',
                                     TextInput3_1.Text
-                                ) && (Status.Value = ComboBox1.Selected.Value || IsBlank(ComboBox1.SelectedItems))
+                                ) && (Status.Value = ComboBox1.Selected.Value || IsBlank(ComboBox1.Selected.Value))
                             )
                         Layout: =Layout.Vertical
                         LayoutMinHeight: =0
