--- a/Tenant Onboarding Solution/Src/All Requests Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/All Requests Screen.fx.yaml
@@ -290,160 +290,6 @@
                             Text: =""
                             ZIndex: =6
 
-                Container37_1 As groupContainer.verticalAutoLayoutContainer:
-                    Fill: =RGBA(255, 255, 255, 1)
-                    LayoutDirection: =LayoutDirection.Vertical
-                    LayoutMinHeight: =0
-                    LayoutMinWidth: =0
-                    LayoutMode: =LayoutMode.Auto
-                    ZIndex: =2
-
-                    Gallery2 As gallery.galleryVertical:
-                        BorderColor: =App.Theme.Colors.Darker40
-                        DelayItemLoading: =true
-                        Items: |-
-                            =Filter(
-                                'Tenant Onboarding List',
-                                StartsWith(
-                                    'Name of Prospective Tenant',
-                                    TextInput3_1.Text
-                                ) && (Status.Value = ComboBox1.Selected.Value || IsBlank(ComboBox1.Selected.Value))
-                            )
-                        Layout: =Layout.Vertical
-                        LayoutMinHeight: =0
-                        LayoutMinWidth: =0
-                        LoadingSpinner: =LoadingSpinner.Data
-                        TemplateSize: =50
-                        Width: =Parent.Width
-                        ZIndex: =1
-
-                        Container42 As groupContainer.horizontalAutoLayoutContainer:
-                            DropShadow: =DropShadow.Light
-                            Height: =Parent.TemplateHeight
-                            LayoutAlignItems: =LayoutAlignItems.Center
-                            LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
-                            LayoutMode: =LayoutMode.Auto
-                            PaddingLeft: =18
-                            PaddingRight: =10
-                            RadiusBottomLeft: =4
-                            RadiusBottomRight: =4
-                            RadiusTopLeft: =4
-                            RadiusTopRight: =4
-                            Width: =Parent.TemplateWidth
-                            ZIndex: =1
-
-                            Label16_12 As label:
-                                BorderColor: =App.Theme.Colors.Darker40
-                                Color: |
-                                    =RGBA(97, 93, 93, 1)
-                                DisabledColor: =RGBA(166, 166, 166, 1)
-                                Font: =App.Theme.Font
-                                FontWeight: =FontWeight.Semibold
-                                Height: =Parent.Height
-                                Size: =9
-                                Text: =ThisItem.'Submission Date'
-                                ZIndex: =1
-
-                            Label16_13 As label:
-                                BorderColor: =App.Theme.Colors.Darker40
-                                Color: |
-                                    =RGBA(97, 93, 93, 1)
-                                DisabledColor: =RGBA(166, 166, 166, 1)
-                                Font: =App.Theme.Font
-                                FontWeight: =FontWeight.Semibold
-                                Height: =Parent.Height
-                                Size: =9
-                                Text: =ThisItem.'Name of Prospective Tenant'
-                                Width: =200
-                                ZIndex: =2
-
-                            Container39 As groupContainer.horizontalAutoLayoutContainer:
-                                AlignInContainer: =AlignInContainer.Center
-                                Fill: =Switch(ThisItem.Status.Value,"Approved",RGBA(1, 167, 37, 0.1),"Rejected",RGBA(201, 5, 5, 0.1),"Pending",RGBA(254,99,9,0.1))
-                                FillPortions: =0
-                                Height: =30
-                                LayoutAlignItems: =LayoutAlignItems.Center
-                                LayoutJustifyContent: =LayoutJustifyContent.Center
-                                LayoutMinHeight: =0
-                                LayoutMinWidth: =250
-                                LayoutMode: =LayoutMode.Auto
-                                PaddingLeft: =10
-                                RadiusBottomLeft: =50
-                                RadiusBottomRight: =50
-                                RadiusTopLeft: =50
-                                RadiusTopRight: =50
-                                Width: =90
-                                X: =40
-                                ZIndex: =5
-
-                                Circle1 As circle:
-                                    BorderColor: =App.Theme.Colors.Darker40
-                                    Fill: |-
-                                        =Switch(ThisItem.Status.Value,"Approved",RGBA(1, 167, 37, 1),"Rejected",RGBA(201, 5, 5, 1),"Pending",RGBA(254,99,9,1)
-                                        )
-                                    Height: =10
-                                    Width: =10
-                                    ZIndex: =1
-
-                                Label17 As label:
-                                    AutoHeight: =true
-                                    BorderColor: =App.Theme.Colors.Darker40
-                                    Color: =Switch(ThisItem.Status.Value,"Approved",RGBA(1,167,37,1),"Rejected",RGBA(201,5,5,1),"Pending",RGBA(254,99,9,1))
-                                    DisabledColor: =RGBA(166, 166, 166, 1)
-                                    FillPortions: =1
-                                    Font: =Font.Arial
-                                    FontWeight: =FontWeight.Semibold
-                                    LayoutMinWidth: =0
-                                    Size: =8
-                                    Text: =ThisItem.Status.Value
-                                    ZIndex: =3
-
-                            Container59_2 As groupContainer.manualLayoutContainer:
-                                AlignInContainer: =AlignInContainer.Center
-                                FillPortions: =0
-                                Height: =Parent.Height - 25
-                                LayoutMinHeight: =0
-                                LayoutMinWidth: =250
-                                Width: =150
-                                ZIndex: =9
-
-                                Label26_2 As label:
-                                    Align: =Align.Center
-                                    BorderColor: =App.Theme.Colors.Darker40
-                                    Color: =RGBA(85, 69, 191,1)
-                                    DisabledColor: =RGBA(166, 166, 166, 1)
-                                    Font: =App.Theme.Font
-                                    FontWeight: =FontWeight.Semibold
-                                    Height: =Parent.Height
-                                    Size: =10
-                                    Text: ="See details"
-                                    Underline: =true
-                                    Width: =Parent.Width
-                                    ZIndex: =1
-
-                                Button11_2 As button:
-                                    BorderColor: =App.Theme.Colors.Primary
-                                    BorderStyle: =BorderStyle.None
-                                    Color: =RGBA(0, 0, 0, 0)
-                                    DisabledBorderColor: =RGBA(244, 244, 244, 1)
-                                    DisabledColor: =RGBA(166, 166, 166, 1)
-                                    DisabledFill: =RGBA(244, 244, 244, 1)
-                                    Fill: =Color.Transparent
-                                    Font: =App.Theme.Font
-                                    FontWeight: =FontWeight.Semibold
-                                    Height: =Parent.Height
-                                    HoverBorderColor: =App.Theme.Colors.Darker10
-                                    HoverFill: =RGBA(128, 128, 128, 0.1)
-                                    OnSelect: |-
-                                        =UpdateContext({loading:true});Set(record,ThisItem);Set(attachments,ThisItem.Attachments);UpdateContext({loading:false});Navigate('Details Screen',ScreenTransition.Fade);
-                                    PressedBorderColor: =App.Theme.Colors.Darker40
-                                    PressedColor: =Self.Color
-                                    PressedFill: =Self.Fill
-                                    Size: =15
-                                    Text: =
-                                    Width: =Parent.Width
-                                    ZIndex: =2
-
                 Container2 As groupContainer.manualLayoutContainer:
                     Fill: =RGBA(255, 255, 255, 1)
                     LayoutMinHeight: =0
@@ -602,6 +448,7 @@
                         Fill: =RGBA(255, 255, 255, 1)
                         Height: =Parent.Height
                         Image: ='No Item found'
+                        Visible: =Gallery2_3.AllItemsCount = 0
                         Width: =Parent.Width
                         ZIndex: =2
 
