--- a/Tenant Onboarding Solution/Src/Home Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Home Screen.fx.yaml
@@ -349,6 +349,132 @@
                                     Width: =Parent.Width
                                     ZIndex: =2
 
+                Container3 As groupContainer.manualLayoutContainer:
+                    Fill: =RGBA(255, 255, 255, 1)
+                    LayoutMinHeight: =0
+                    LayoutMinWidth: =0
+                    ZIndex: =4
+
+                    Gallery2_4 As gallery.galleryVertical:
+                        BorderColor: =App.Theme.Colors.Darker40
+                        DelayItemLoading: =true
+                        Height: =Parent.Height
+                        Items: =Filter('Tenant Onboarding List',Status.Value = "Pending")
+                        Layout: =Layout.Vertical
+                        LoadingSpinner: =LoadingSpinner.Data
+                        TemplateSize: =50
+                        Width: =Parent.Width
+                        ZIndex: =1
+
+                        Container42_4 As groupContainer.horizontalAutoLayoutContainer:
+                            DropShadow: =DropShadow.Light
+                            Height: =Parent.TemplateHeight
+                            LayoutAlignItems: =LayoutAlignItems.Center
+                            LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
+                            LayoutMode: =LayoutMode.Auto
+                            PaddingLeft: =18
+                            PaddingRight: =10
+                            RadiusBottomLeft: =4
+                            RadiusBottomRight: =4
+                            RadiusTopLeft: =4
+                            RadiusTopRight: =4
+                            Width: =Parent.TemplateWidth
+                            ZIndex: =1
+
+                            Label16_23 As label:
+                                BorderColor: =App.Theme.Colors.Darker40
+                                Color: |
+                                    =RGBA(97, 93, 93, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
+                                FontWeight: =FontWeight.Semibold
+                                Height: =Parent.Height
+                                Size: =9
+                                Text: =Text(ThisItem.'Submission Date',"dd-mm-yyyy")
+                                ZIndex: =1
+
+                            Label16_24 As label:
+                                BorderColor: =App.Theme.Colors.Darker40
+                                Color: |
+                                    =RGBA(97, 93, 93, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
+                                FontWeight: =FontWeight.Semibold
+                                Height: =Parent.Height
+                                Size: =9
+                                Text: =ThisItem.'Name of Prospective Tenant'
+                                Width: =200
+                                ZIndex: =2
+
+                            Label16_25 As label:
+                                BorderColor: =App.Theme.Colors.Darker40
+                                Color: |
+                                    =RGBA(97, 93, 93, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
+                                FontWeight: =FontWeight.Semibold
+                                Height: =Parent.Height
+                                Size: =9
+                                Text: =ThisItem.Status.Value
+                                ZIndex: =3
+
+                            Container59_2 As groupContainer.manualLayoutContainer:
+                                AlignInContainer: =AlignInContainer.Center
+                                FillPortions: =0
+                                Height: =Parent.Height - 25
+                                LayoutMinHeight: =0
+                                LayoutMinWidth: =250
+                                Width: =150
+                                ZIndex: =4
+
+                                Label26_2 As label:
+                                    Align: =Align.Center
+                                    BorderColor: =App.Theme.Colors.Darker40
+                                    Color: =RGBA(85, 69, 191,1)
+                                    DisabledColor: =RGBA(166, 166, 166, 1)
+                                    Font: =App.Theme.Font
+                                    FontWeight: =FontWeight.Semibold
+                                    Height: =Parent.Height
+                                    Size: =10
+                                    Text: ="See details"
+                                    Underline: =true
+                                    Width: =Parent.Width
+                                    ZIndex: =1
+
+                                Button11_2 As button:
+                                    BorderColor: =App.Theme.Colors.Primary
+                                    BorderStyle: =BorderStyle.None
+                                    Color: =RGBA(0, 0, 0, 0)
+                                    DisabledBorderColor: =RGBA(244, 244, 244, 1)
+                                    DisabledColor: =RGBA(166, 166, 166, 1)
+                                    DisabledFill: =RGBA(244, 244, 244, 1)
+                                    Fill: =Color.Transparent
+                                    Font: =App.Theme.Font
+                                    FontWeight: =FontWeight.Semibold
+                                    Height: =Parent.Height
+                                    HoverBorderColor: =App.Theme.Colors.Darker10
+                                    HoverFill: =RGBA(128, 128, 128, 0.1)
+                                    OnSelect: |-
+                                        =UpdateContext({loading:true});Set(record,ThisItem);Set(attachments,ThisItem.Attachments);UpdateContext({loading:false});Navigate('Details Screen',ScreenTransition.Fade);
+                                    PressedBorderColor: =App.Theme.Colors.Darker40
+                                    PressedColor: =Self.Color
+                                    PressedFill: =Self.Fill
+                                    Size: =15
+                                    Text: =
+                                    Width: =Parent.Width
+                                    ZIndex: =2
+
+                    Image1_3 As image:
+                        BorderColor: =App.Theme.Colors.Darker40
+                        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                        DisabledFill: =RGBA(244, 244, 244, 1)
+                        Fill: =RGBA(255, 255, 255, 1)
+                        Height: =Parent.Height
+                        Image: ='No Item found'
+                        Visible: =Gallery2_4.AllItemsCount = 0
+                        Width: =Parent.Width
+                        ZIndex: =2
+
     LoadingImageHome As Loading:
         Visible: |
             =loading
