--- a/Tenant Onboarding Solution/CanvasManifest.json
+++ b/Tenant Onboarding Solution/CanvasManifest.json
@@ -142,7 +142,6 @@
     "Home Screen",
     "Details Screen",
     "Mail Screen",
-    "All Requests Screen",
-    "All Requests Screen_1"
+    "All Requests Screen"
   ]
 }
