--- a/Tenant Onboarding Solution/Src/Mail Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Mail Screen.fx.yaml
@@ -234,7 +234,7 @@
                     "Offer letter has been sent successfully",
                     NotificationType.Success
                 );
-                Navigate('Home Screen');
+                Navigate('Dashboard Screen');
                 Set(
                     record,
                     Blank()
