--- a/Tenant Onboarding Solution/Src/Employee Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Employee Screen.fx.yaml
@@ -78,7 +78,7 @@
 
                 Container34_2 As groupContainer.verticalAutoLayoutContainer:
                     FillPortions: =0
-                    Height: =100
+                    Height: =150
                     LayoutDirection: =LayoutDirection.Vertical
                     LayoutMinHeight: =100
                     LayoutMinWidth: =250
@@ -95,7 +95,7 @@
                         LayoutMode: =LayoutMode.Auto
                         PaddingLeft: =18
                         PaddingRight: =10
-                        ZIndex: =2
+                        ZIndex: =1
 
                         Label15_4 As label:
                             BorderColor: =App.Theme.Colors.Darker40
@@ -236,6 +236,144 @@
                                 SelectMultiple: =false
                                 Size: =9
                                 Width: =160
+                                ZIndex: =3
+
+                    Container36_3 As groupContainer.horizontalAutoLayoutContainer:
+                        Fill: =RGBA(255, 255, 255, 1)
+                        LayoutGap: =10
+                        LayoutMinHeight: =0
+                        LayoutMinWidth: =0
+                        LayoutMode: =LayoutMode.Auto
+                        PaddingLeft: =18
+                        PaddingRight: =10
+                        ZIndex: =2
+
+                        Container59_10 As groupContainer.manualLayoutContainer:
+                            AlignInContainer: =AlignInContainer.Center
+                            FillPortions: =0
+                            Height: =Parent.Height
+                            LayoutMinHeight: =0
+                            LayoutMinWidth: =250
+                            Width: =150
+                            ZIndex: =1
+
+                            Icon1_3 As icon.Export:
+                                BorderColor: =App.Theme.Colors.Darker40
+                                Color: =RGBA(85, 69, 191,1)
+                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                DisabledColor: =RGBA(244, 244, 244, 1)
+                                Height: =Parent.Height
+                                Icon: =Icon.Export
+                                PaddingBottom: =5
+                                PaddingLeft: =5
+                                PaddingRight: =5
+                                PaddingTop: =5
+                                Width: =Parent.Width*0.3
+                                X: =Label26_8.Width
+                                ZIndex: =1
+
+                            Label26_8 As label:
+                                Align: =Align.Center
+                                BorderColor: =App.Theme.Colors.Darker40
+                                Color: =RGBA(85, 69, 191,1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
+                                FontWeight: =FontWeight.Semibold
+                                Height: =Parent.Height
+                                Size: =10
+                                Text: ="Add Employee"
+                                Underline: =true
+                                Width: =Parent.Width*0.7
+                                ZIndex: =2
+
+                            Button11_10 As button:
+                                BorderColor: =App.Theme.Colors.Primary
+                                BorderStyle: =BorderStyle.None
+                                Color: =RGBA(0, 0, 0, 0)
+                                DisabledBorderColor: =RGBA(244, 244, 244, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                DisabledFill: =RGBA(244, 244, 244, 1)
+                                Fill: =Color.Transparent
+                                Font: =App.Theme.Font
+                                FontWeight: =FontWeight.Semibold
+                                Height: =Parent.Height
+                                HoverBorderColor: =App.Theme.Colors.Darker10
+                                HoverFill: =Self.Fill
+                                OnSelect: =Navigate('All Requests Screen')
+                                PressedBorderColor: =App.Theme.Colors.Darker40
+                                PressedColor: =Self.Color
+                                PressedFill: =Self.Fill
+                                RadiusBottomLeft: =0
+                                RadiusBottomRight: =0
+                                RadiusTopLeft: =0
+                                RadiusTopRight: =0
+                                Size: =15
+                                Text: =
+                                Width: =Parent.Width
+                                ZIndex: =3
+
+                        Container59_11 As groupContainer.manualLayoutContainer:
+                            AlignInContainer: =AlignInContainer.Center
+                            FillPortions: =0
+                            Height: =Parent.Height
+                            LayoutMinHeight: =0
+                            LayoutMinWidth: =250
+                            Width: =150
+                            ZIndex: =2
+
+                            Icon1_4 As icon.Export:
+                                BorderColor: =App.Theme.Colors.Darker40
+                                Color: =RGBA(85, 69, 191,1)
+                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                DisabledColor: =RGBA(244, 244, 244, 1)
+                                Height: =Parent.Height
+                                Icon: =Icon.Export
+                                PaddingBottom: =5
+                                PaddingLeft: =5
+                                PaddingRight: =5
+                                PaddingTop: =5
+                                Width: =Parent.Width*0.3
+                                X: =Label26_9.Width
+                                ZIndex: =1
+
+                            Label26_9 As label:
+                                Align: =Align.Center
+                                BorderColor: =App.Theme.Colors.Darker40
+                                Color: =RGBA(85, 69, 191,1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
+                                FontWeight: =FontWeight.Semibold
+                                Height: =Parent.Height
+                                Size: =10
+                                Text: ="Export Records"
+                                Underline: =true
+                                Width: =Parent.Width*0.7
+                                ZIndex: =2
+
+                            Button11_11 As button:
+                                BorderColor: =App.Theme.Colors.Primary
+                                BorderStyle: =BorderStyle.None
+                                Color: =RGBA(0, 0, 0, 0)
+                                DisabledBorderColor: =RGBA(244, 244, 244, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                DisabledFill: =RGBA(244, 244, 244, 1)
+                                Fill: =Color.Transparent
+                                Font: =App.Theme.Font
+                                FontWeight: =FontWeight.Semibold
+                                Height: =Parent.Height
+                                HoverBorderColor: =App.Theme.Colors.Darker10
+                                HoverFill: =Self.Fill
+                                OnSelect: =Navigate('All Requests Screen')
+                                PressedBorderColor: =App.Theme.Colors.Darker40
+                                PressedColor: =Self.Color
+                                PressedFill: =Self.Fill
+                                RadiusBottomLeft: =0
+                                RadiusBottomRight: =0
+                                RadiusTopLeft: =0
+                                RadiusTopRight: =0
+                                Size: =15
+                                Text: =
+                                Width: =Parent.Width
                                 ZIndex: =3
 
                     Container36_1 As groupContainer.horizontalAutoLayoutContainer:
