--- a/Tenant Onboarding Solution/Src/Employee Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Employee Screen.fx.yaml
@@ -105,7 +105,7 @@
                             Font: =App.Theme.Font
                             FontWeight: =FontWeight.Bold
                             LayoutMinWidth: =0
-                            Size: =13
+                            Size: =15
                             Text: ="Employees"
                             Width: =Parent.Width
                             ZIndex: =1
@@ -254,37 +254,8 @@
                             Height: =Parent.Height
                             LayoutMinHeight: =0
                             LayoutMinWidth: =250
-                            Width: =150
+                            Width: =40
                             ZIndex: =1
-
-                            Icon1_3 As icon.Export:
-                                BorderColor: =App.Theme.Colors.Darker40
-                                Color: =RGBA(85, 69, 191,1)
-                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                                DisabledColor: =RGBA(244, 244, 244, 1)
-                                Height: =Parent.Height
-                                Icon: =Icon.Export
-                                PaddingBottom: =5
-                                PaddingLeft: =5
-                                PaddingRight: =5
-                                PaddingTop: =5
-                                Width: =Parent.Width*0.3
-                                X: =Label26_8.Width
-                                ZIndex: =1
-
-                            Label26_8 As label:
-                                Align: =Align.Center
-                                BorderColor: =App.Theme.Colors.Darker40
-                                Color: =RGBA(85, 69, 191,1)
-                                DisabledColor: =RGBA(166, 166, 166, 1)
-                                Font: =App.Theme.Font
-                                FontWeight: =FontWeight.Semibold
-                                Height: =Parent.Height
-                                Size: =10
-                                Text: ="Add Employee"
-                                Underline: =true
-                                Width: =Parent.Width*0.7
-                                ZIndex: =2
 
                             Button11_10 As button:
                                 BorderColor: =App.Theme.Colors.Primary
@@ -309,8 +280,23 @@
                                 RadiusTopRight: =0
                                 Size: =15
                                 Text: =
+                                Tooltip: ="Add Employee"
                                 Width: =Parent.Width
                                 ZIndex: =3
+
+                            Image2 As image:
+                                BorderColor: =App.Theme.Colors.Darker40
+                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                DisabledFill: =RGBA(244, 244, 244, 1)
+                                Height: =43
+                                Image: ='person-add'
+                                PaddingBottom: =5
+                                PaddingLeft: =5
+                                PaddingRight: =5
+                                PaddingTop: =5
+                                Tooltip: ="Add Employee"
+                                Width: =Parent.Width
+                                ZIndex: =4
 
                         Container59_11 As groupContainer.manualLayoutContainer:
                             AlignInContainer: =AlignInContainer.Center
@@ -318,37 +304,8 @@
                             Height: =Parent.Height
                             LayoutMinHeight: =0
                             LayoutMinWidth: =250
-                            Width: =150
+                            Width: =40
                             ZIndex: =2
-
-                            Icon1_4 As icon.Export:
-                                BorderColor: =App.Theme.Colors.Darker40
-                                Color: =RGBA(85, 69, 191,1)
-                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                                DisabledColor: =RGBA(244, 244, 244, 1)
-                                Height: =Parent.Height
-                                Icon: =Icon.Export
-                                PaddingBottom: =5
-                                PaddingLeft: =5
-                                PaddingRight: =5
-                                PaddingTop: =5
-                                Width: =Parent.Width*0.3
-                                X: =Label26_9.Width
-                                ZIndex: =1
-
-                            Label26_9 As label:
-                                Align: =Align.Center
-                                BorderColor: =App.Theme.Colors.Darker40
-                                Color: =RGBA(85, 69, 191,1)
-                                DisabledColor: =RGBA(166, 166, 166, 1)
-                                Font: =App.Theme.Font
-                                FontWeight: =FontWeight.Semibold
-                                Height: =Parent.Height
-                                Size: =10
-                                Text: ="Export Records"
-                                Underline: =true
-                                Width: =Parent.Width*0.7
-                                ZIndex: =2
 
                             Button11_11 As button:
                                 BorderColor: =App.Theme.Colors.Primary
@@ -373,8 +330,23 @@
                                 RadiusTopRight: =0
                                 Size: =15
                                 Text: =
+                                Tooltip: ="Export Employee Record"
                                 Width: =Parent.Width
                                 ZIndex: =3
+
+                            Image2_3 As image:
+                                BorderColor: =App.Theme.Colors.Darker40
+                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                DisabledFill: =RGBA(244, 244, 244, 1)
+                                Height: =43
+                                Image: ='box-arrow-up-right'
+                                PaddingBottom: =5
+                                PaddingLeft: =5
+                                PaddingRight: =5
+                                PaddingTop: =5
+                                Tooltip: ="Export Employee Record"
+                                Width: =Parent.Width
+                                ZIndex: =4
 
                     Container36_1 As groupContainer.horizontalAutoLayoutContainer:
                         LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
@@ -385,69 +357,18 @@
                         PaddingRight: =10
                         ZIndex: =3
 
-                        Container59_9 As groupContainer.manualLayoutContainer:
+                        Label16_14 As label:
+                            Align: =Align.Center
                             AlignInContainer: =AlignInContainer.Center
-                            FillPortions: =0
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(159, 159, 159, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
                             Height: =Parent.Height
-                            LayoutMinHeight: =0
-                            LayoutMinWidth: =250
-                            Width: =150
+                            Size: =9
+                            Text: =""
                             ZIndex: =7
-
-                            Icon1_2 As icon.Export:
-                                BorderColor: =App.Theme.Colors.Darker40
-                                Color: =RGBA(85, 69, 191,1)
-                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                                DisabledColor: =RGBA(244, 244, 244, 1)
-                                Height: =Parent.Height
-                                Icon: =Icon.Export
-                                PaddingBottom: =5
-                                PaddingLeft: =5
-                                PaddingRight: =5
-                                PaddingTop: =5
-                                Width: =Parent.Width*0.3
-                                X: =Label26_7.Width
-                                ZIndex: =1
-
-                            Label26_7 As label:
-                                Align: =Align.Center
-                                BorderColor: =App.Theme.Colors.Darker40
-                                Color: =RGBA(85, 69, 191,1)
-                                DisabledColor: =RGBA(166, 166, 166, 1)
-                                Font: =App.Theme.Font
-                                FontWeight: =FontWeight.Semibold
-                                Height: =Parent.Height
-                                Size: =10
-                                Text: ="Export Records"
-                                Underline: =true
-                                Width: =Parent.Width*0.7
-                                ZIndex: =2
-
-                            Button11_9 As button:
-                                BorderColor: =App.Theme.Colors.Primary
-                                BorderStyle: =BorderStyle.None
-                                Color: =RGBA(0, 0, 0, 0)
-                                DisabledBorderColor: =RGBA(244, 244, 244, 1)
-                                DisabledColor: =RGBA(166, 166, 166, 1)
-                                DisabledFill: =RGBA(244, 244, 244, 1)
-                                Fill: =Color.Transparent
-                                Font: =App.Theme.Font
-                                FontWeight: =FontWeight.Semibold
-                                Height: =Parent.Height
-                                HoverBorderColor: =App.Theme.Colors.Darker10
-                                HoverFill: =Self.Fill
-                                OnSelect: =Navigate('All Requests Screen')
-                                PressedBorderColor: =App.Theme.Colors.Darker40
-                                PressedColor: =Self.Color
-                                PressedFill: =Self.Fill
-                                RadiusBottomLeft: =0
-                                RadiusBottomRight: =0
-                                RadiusTopLeft: =0
-                                RadiusTopRight: =0
-                                Size: =15
-                                Text: =
-                                Width: =Parent.Width
-                                ZIndex: =3
 
                         Label16_6 As label:
                             Align: =Align.Center
