--- a/Tenant Onboarding Solution/Src/App.fx.yaml
+++ b/Tenant Onboarding Solution/Src/App.fx.yaml
@@ -20,16 +20,17 @@ App As appinfo:
           <path d='M6.502 7a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3'/>
           <path d='M14 14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zM4 1a1 1 0 0 0-1 1v10l2.224-2.224a.5.5 0 0 1 .61-.075L8 11l2.157-3.02a.5.5 0 0 1 .76-.063L13 10V4.5h-2A1.5 1.5 0 0 1 9.5 3V1z'/>
         </svg>";
-        creditRiskEmailAddress=First(Filter('Environment Variable Values','Environment Variable Definition'.'Display Name' = "Credit Risk Team Email Address").Value).Value;
-        appBaseUrl= LookUp('Environment Variable Values','Environment Variable Definition'.'Display Name' = "App BaseUrl").Value;
-        creditRiskGroupID= LookUp('Environment Variable Values','Environment Variable Definition'.'Display Name' = "Credit Risk Group ID").Value;
+        //creditRiskEmailAddress=First(Filter('Environment Variable Values','Environment Variable Definition'.'Display Name' = "Credit Risk Team Email Address").Value).Value;
+        //appBaseUrl= LookUp('Environment Variable Values','Environment Variable Definition'.'Display Name' = "App BaseUrl").Value;
+        //creditRiskGroupID= LookUp('Environment Variable Values','Environment Variable Definition'.'Display Name' = "Credit Risk Group ID").Value;
         pdfColorText = "RGBA(176, 65,65, 1)";
         excelColorText = "RGBA(45,128,40,1)";
         pptColorText = "RBGA(233,79,76,1)";
         wordColorText = "RGBA(40,112,134,1)";
         imageColorText = "RGBA(40,112,134,1)";
-        groupMembers = Office365Groups.ListGroupMembers(creditRiskGroupID).value;
-        currentUser= Office365Users.MyProfileV2();
+        //groupMembers = Office365Groups.ListGroupMembers(creditRiskGroupID).value;
+        //currentUser= Office365Users.MyProfileV2();
+        currentMonthYear = Text(Today(),"MM-yyyy");
         
         
         
